--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <header>
+       <nav> <!-- Nav bar links: Transparent BG -->
+          <ul>
+               <li><a class="links" href="#">home</a></li>
+               <li><a class="links" href="#">bio</a></li>
+               <li><a class="links" href="#">projects</a></li>
+               <li><a class="links" href="#">contact</a></li>  
+          </ul>
+       </nav>
+  </header>
+  <main>
+
+  </main>
+  <footer> <!-- Footer bar links: Solid BG -->
+          <ul>
+               <li><a class="links" href="#">home</a></li>
+               <li><a class="links" href="#">bio</a></li>
+               <li><a class="links" href="#">projects</a></li>
+               <li><a class="links" href="#">contact</a></li>  
+          </ul>
+  </footer>
 </body>
 </html>
