Added position of CTA link and Site structure css blocks.

--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <html lang="en">
-<head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Personal Portfolio Site</title>
-     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-       <nav> <!-- Nav bar links: Transparent BG -->
-          <ul>
-               <li><a class="links" href="#">home</a></li>
-               <li><a class="links" href="#">bio</a></li>
-               <li><a class="links" href="#">projects</a></li>
-               <li><a class="links" href="#">contact</a></li>  
-          </ul>
-       </nav>
-  </header>
-  <main>
-
-  </main>
-  <footer> <!-- Footer bar links: Solid BG -->
-          <ul>
-               <li><a class="links" href="#">home</a></li>
-               <li><a class="links" href="#">bio</a></li>
-               <li><a class="links" href="#">projects</a></li>
-               <li><a class="links" href="#">contact</a></li>  
-          </ul>
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Personal Portfolio Site</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <!-- Nav bar links: Transparent BG -->
+        <ul>
+          <li><a class="links" href="#">home</a></li>
+          <li><a class="links" href="#">bio</a></li>
+          <li><a class="links" href="#">projects</a></li>
+          <li><a class="links" id="cta" href="#">contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer>
+      <!-- Footer bar links: Solid BG -->
+      <ul>
+        <li><a class="links" href="#">home</a></li>
+        <li><a class="links" href="#">bio</a></li>
+        <li><a class="links" href="#">projects</a></li>
+        <li><a class="links" href="#">contact</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
