Added nav styling to css and set display to inline for links.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+        
+    </main>
     <footer>
       <!-- Footer bar links: Solid BG -->
       <ul>
