--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
           <li><a class="links" href="#">home</a></li>
           <li><a class="links" href="#">bio</a></li>
           <li><a class="links" href="#">projects</a></li>
-          <li><a id="cta" href="#">contact</a></li>
+          <li><a class="links" id="cta" href="#">contact</a></li>
         </ul>
+        
       </nav>
     </header>
     <main>
