--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
       </nav>
     </header>
     <main>
-
+      <aside class="profile">
+        <div>
+          <h1>Profile</h1>
+        </div>
+      </aside>
+      <section class="profile">
+        
+      </section>
     </main>
     <footer>
       <!-- Footer bar links: Solid BG -->
