--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github Portfolio - Timothy Burt</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Social Links from Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -23,13 +25,21 @@
       <div class="profile" id="bio">
           <img src="img/Tim - Avatar for Biz.png" alt="Profile Picture" class="profile-avatar">
           <h1>Timothy Burt</h1>
-          <h2>Web Developer</h2>
-          <p>
-            <ul>
-              <li><a class="cta" href="mailto:refreshedpc@outlook.com">contact</a></li>
-            </ul>
-          </p>
-            
+          <p class="title">Web Developer</p>
+          <p>Suny Adirondack
+            <br> 
+            Media Arts AAS</p>
+          <div class="socials">
+            <a href="https://vember.tech" target=_blank>
+              <i class="fa fa-dribbble"></i></a>
+            <a href="https://github.com/timothyburt" target=_blank>
+              <i class="fa fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/timothyjburt/" target=_blank>
+              <i class="fa fa-linkedin"></i></a>
+        </div>
+          <button>
+            <a class="links" href="mailto:refreshedpc@outlook.com">Contact</a>
+          </button>
       </div>
 
       <!-- Project Section -->
@@ -39,7 +49,7 @@
           <hr>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At a excepturi eligendi architecto labore ullam voluptate. Magnam, aperiam. Repellendus dolorum perferendis impedit repellat doloremque. Atque doloribus deleniti error perferendis cumque.
 
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis maiores, inventore aut consectetur ipsam, ipsa dicta eaque similique quo at fugiat nemo quae suscipit labore repudiandae ab repellendus quos ipsum.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis maiores, inventore aut consectetur ipsam, ipsa dicta eaque similique quo at fugiat nemo quae suscipit labore repudiandae ab repellendus quos ipsum.
         </p>
         </div>
       </section>
