Trying to stack content boxes to the right. I'm a little stuck at the moment.

--- a/index.html
+++ b/index.html
@@ -43,16 +43,42 @@
       </div>
 
       <!-- Project Section -->
-      <section class="projects" id="projects">
-        <div>
+      <div class="projects" id="projects">
           <h3>Current Projects</h3>
           <hr>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At a excepturi eligendi architecto labore ullam voluptate. Magnam, aperiam. Repellendus dolorum perferendis impedit repellat doloremque. Atque doloribus deleniti error perferendis cumque.
 
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis maiores, inventore aut consectetur ipsam, ipsa dicta eaque similique quo at fugiat nemo quae suscipit labore repudiandae ab repellendus quos ipsum.
-        </p>
-        </div>
-      </section>
+        </p>     
+
+      </div>
+      <br><br>
+      <div class="projects">
+        <h3>Current Projects</h3>
+          <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At a excepturi eligendi architecto labore ullam voluptate. Magnam, aperiam. Repellendus dolorum perferendis impedit repellat doloremque. Atque doloribus deleniti error perferendis cumque.
+
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis maiores, inventore aut consectetur ipsam, ipsa dicta eaque similique quo at fugiat nemo quae suscipit labore repudiandae ab repellendus quos ipsum.
+        </p> 
+      </div>
+      <br><br>
+      <div class="projects">
+        <h3>Current Projects</h3>
+          <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At a excepturi eligendi architecto labore ullam voluptate. Magnam, aperiam. Repellendus dolorum perferendis impedit repellat doloremque. Atque doloribus deleniti error perferendis cumque.
+
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis maiores, inventore aut consectetur ipsam, ipsa dicta eaque similique quo at fugiat nemo quae suscipit labore repudiandae ab repellendus quos ipsum.
+        </p> 
+      </div>
+      <br><br>
+      <div class="projects">
+        <h3>Current Projects</h3>
+          <hr>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At a excepturi eligendi architecto labore ullam voluptate. Magnam, aperiam. Repellendus dolorum perferendis impedit repellat doloremque. Atque doloribus deleniti error perferendis cumque.
+
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis maiores, inventore aut consectetur ipsam, ipsa dicta eaque similique quo at fugiat nemo quae suscipit labore repudiandae ab repellendus quos ipsum.
+        </p> 
+      </div>
 
     </main>
 
