Rearranged Content Boxes but I'm having trouble solving how to get them on same plane.

--- a/index.html
+++ b/index.html
@@ -19,68 +19,58 @@
         </ul>
       </nav>
     </header>
-    <main>
 
-      <!-- Profile Section -->
-      <div class="profile" id="bio">
-          <img src="img/Tim - Avatar for Biz.png" alt="Profile Picture" class="profile-avatar">
-          <h1>Timothy Burt</h1>
-          <p class="title">Web Developer</p>
-          <p>Suny Adirondack
-            <br> 
-            Media Arts AAS</p>
-          <div class="socials">
-            <a href="https://vember.tech" target=_blank>
-              <i class="fa fa-dribbble"></i></a>
-            <a href="https://github.com/timothyburt" target=_blank>
-              <i class="fa fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/timothyjburt/" target=_blank>
-              <i class="fa fa-linkedin"></i></a>
+    <section>
+      <div class="sidebar">
+        <!-- Profile Section -->
+        <div class="profile" id="bio">
+            <img src="img/Tim - Avatar for Biz.png" alt="Profile Picture" class="profile-avatar">
+            <h1>Timothy Burt</h1>
+            <p class="title">Web Developer</p>
+            <p>Suny Adirondack
+              <br> 
+              Media Arts AAS</p>
+            <div class="socials">
+              <a href="https://vember.tech" target="_blank">
+                <i class="fa fa-dribbble"></i></a>
+              <a href="https://github.com/timothyburt" target="_blank">
+                <i class="fa fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/timothyjburt/" target="_blank">
+                <i class="fa fa-linkedin"></i></a>
+          </div>
+            <button>
+              <a class="links" href="mailto:refreshedpc@outlook.com">Contact</a>
+            </button>
         </div>
-          <button>
-            <a class="links" href="mailto:refreshedpc@outlook.com">Contact</a>
-          </button>
+        
+        <!-- Project Section -->
+        <div class="projects" id="projects">
+          <div>
+          <h2>Put up next to you brah</h2>
+          </div>
+          <div>
+            <h3>Current Projects</h3>
+            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam aspernatur sequi corporis assumenda dolore obcaecati unde, iste laudantium provident incidunt perspiciatis cum aliquam nobis, culpa dolorum quae quasi sed tempore.</p>
+          </div>
+          <div>
+            <h3>Current Projects</h3>
+            <hr>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, magnam reiciendis deleniti laudantium sed hic explicabo ipsam ipsa culpa iste doloremque rerum, ducimus odio sunt beatae! Fugiat voluptates laudantium rerum!</p>
+          </div>
+          <div>
+            <h3>Current Projects</h3>
+            <hr>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem non fugit, cumque sit similique voluptates. Atque minima, ad eveniet reprehenderit, eos, odio consequuntur veniam dolor nisi dolorem quam porro distinctio?</p>
+          </div>
+          <div>
+            <h3>Current Projects</h3>
+            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur perferendis ipsa praesentium aperiam, quidem similique ab tenetur magnam rerum, ex aliquid eveniet aliquam veritatis laboriosam nihil adipisci, facilis ipsam saepe.</p>
+          </div>
+        </div>
       </div>
-
-      <!-- Project Section -->
-      <div class="projects" id="projects">
-          <h3>Current Projects</h3>
-          <hr>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At a excepturi eligendi architecto labore ullam voluptate. Magnam, aperiam. Repellendus dolorum perferendis impedit repellat doloremque. Atque doloribus deleniti error perferendis cumque.
-
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis maiores, inventore aut consectetur ipsam, ipsa dicta eaque similique quo at fugiat nemo quae suscipit labore repudiandae ab repellendus quos ipsum.
-        </p>     
-
-      </div>
-      <br><br>
-      <div class="projects">
-        <h3>Current Projects</h3>
-          <hr>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At a excepturi eligendi architecto labore ullam voluptate. Magnam, aperiam. Repellendus dolorum perferendis impedit repellat doloremque. Atque doloribus deleniti error perferendis cumque.
-
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis maiores, inventore aut consectetur ipsam, ipsa dicta eaque similique quo at fugiat nemo quae suscipit labore repudiandae ab repellendus quos ipsum.
-        </p> 
-      </div>
-      <br><br>
-      <div class="projects">
-        <h3>Current Projects</h3>
-          <hr>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At a excepturi eligendi architecto labore ullam voluptate. Magnam, aperiam. Repellendus dolorum perferendis impedit repellat doloremque. Atque doloribus deleniti error perferendis cumque.
-
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis maiores, inventore aut consectetur ipsam, ipsa dicta eaque similique quo at fugiat nemo quae suscipit labore repudiandae ab repellendus quos ipsum.
-        </p> 
-      </div>
-      <br><br>
-      <div class="projects">
-        <h3>Current Projects</h3>
-          <hr>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At a excepturi eligendi architecto labore ullam voluptate. Magnam, aperiam. Repellendus dolorum perferendis impedit repellat doloremque. Atque doloribus deleniti error perferendis cumque.
-
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis maiores, inventore aut consectetur ipsam, ipsa dicta eaque similique quo at fugiat nemo quae suscipit labore repudiandae ab repellendus quos ipsum.
-        </p> 
-      </div>
-
-    </main>
+    </section>
 
     <footer>
       <!-- Footer bar links: Solid BG -->
