Fixed content layout. Need to get media query to have them stack below 800px width.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
 
-    <section>
+    <div class="content">
       <div class="sidebar">
         <!-- Profile Section -->
         <div class="profile" id="bio">
@@ -37,14 +37,15 @@
                 <i class="fa fa-github"></i></a>
               <a href="https://www.linkedin.com/in/timothyjburt/" target="_blank">
                 <i class="fa fa-linkedin"></i></a>
-          </div>
+            </div>
             <button>
               <a class="links" href="mailto:refreshedpc@outlook.com">Contact</a>
             </button>
         </div>
-        
-        <!-- Project Section -->
-        <div class="projects" id="projects">
+      </div>
+
+      <!-- Project Section -->
+      <div class="projects" id="projects">
           <div>
           <h2>Put up next to you brah</h2>
           </div>
@@ -68,9 +69,8 @@
             <hr>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur perferendis ipsa praesentium aperiam, quidem similique ab tenetur magnam rerum, ex aliquid eveniet aliquam veritatis laboriosam nihil adipisci, facilis ipsam saepe.</p>
           </div>
-        </div>
       </div>
-    </section>
+    </div>
 
     <footer>
       <!-- Footer bar links: Solid BG -->
