Success! Fixed Layout. Next Step: organize css elements and flesh out html content into boxes.

--- a/index.html
+++ b/index.html
@@ -6,85 +6,129 @@
     <title>Github Portfolio - Timothy Burt</title>
     <link rel="stylesheet" href="style.css" />
     <!-- Social Links from Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <header>
       <nav>
         <!-- Nav bar links: Transparent BG -->
         <ul>
+          <h2>Github Portfolio Project</h2>
           <li><a class="links" href="index.html">home</a></li>
           <li><a class="links" href="#bio">bio</a></li>
+          <li><a class="links" href="#skills">skills</a></li>
           <li><a class="links" href="#projects">projects</a></li>
         </ul>
       </nav>
     </header>
 
     <div class="content">
-      <div class="sidebar">
-        <!-- Profile Section -->
-        <div class="profile" id="bio">
-            <img src="img/Tim - Avatar for Biz.png" alt="Profile Picture" class="profile-avatar">
-            <h1>Timothy Burt</h1>
-            <p class="title">Web Developer</p>
-            <p>Suny Adirondack
-              <br> 
-              Media Arts AAS</p>
-            <div class="socials">
-              <a href="https://vember.tech" target="_blank">
-                <i class="fa fa-dribbble"></i></a>
-              <a href="https://github.com/timothyburt" target="_blank">
-                <i class="fa fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/timothyjburt/" target="_blank">
-                <i class="fa fa-linkedin"></i></a>
-            </div>
-            <button>
-              <a class="links" href="mailto:refreshedpc@outlook.com">Contact</a>
-            </button>
+      <div class="left-side">
+        <div class="profile">
+          <img
+            src="img/Tim - Avatar for Biz.png"
+            alt="Profile Picture"
+            class="profile-avatar"
+          />
+          <h1>Timothy Burt</h1>
+          <p class="title">Web Developer</p>
+          <p>
+            Suny Adirondack
+            <br />
+            Media Arts AAS
+          </p>
+          <div class="socials">
+            <a href="https://vember.tech" target="_blank">
+              <i class="fa fa-dribbble"></i
+            ></a>
+            <a href="https://github.com/timothyburt" target="_blank">
+              <i class="fa fa-github"></i
+            ></a>
+            <a href="https://www.linkedin.com/in/timothyjburt/" target="_blank">
+              <i class="fa fa-linkedin"></i
+            ></a>
+          </div>
+          <button>
+            <a class="links" href="mailto:refreshedpc@outlook.com">Contact</a>
+          </button>
+        </div>
+        <div class="card" id="bio">
+          <h2>About Me</h2>
+          <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+        </div>
+        <div class="card" id="skills">
+          <h2>Skills</h2>
+          <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
         </div>
       </div>
+      <div class="right-side">
+        <div class="card">
+          <div class="heroBG">
+            <h2>Employment</h2>
+            <h5>Title description, Dec 7, 2017</h5>
+          </div>
+          <p>Some text..</p>
+          <p>
+            Sunt in culpa qui officia deserunt mollit anim id est laborum
+            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco.
+          </p>
+        </div>
+        <div class="card" id="projects">
+          <div class="heroBG">
+            <h2>Current Projects</h2>
+            <h5>Title description, Dec 7, 2017</h5>
+          </div>
+          <p>Some text..</p>
+          <p>
+            Sunt in culpa qui officia deserunt mollit anim id est laborum
+            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco.
+          </p>
+        </div>
+        <div class="card">
+          <div class="heroBG">
+            <h2>Interests</h2>
+            <h5>Title description, Dec 7, 2017</h5>
+          </div>
+          <p>Some text..</p>
+          <p>
+            Sunt in culpa qui officia deserunt mollit anim id est laborum
+            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco.
+          </p>
+        </div>
 
-      <!-- Project Section -->
-      <div class="projects" id="projects">
-          <div>
-          <h2>Put up next to you brah</h2>
-          </div>
-          <div>
-            <h3>Current Projects</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam aspernatur sequi corporis assumenda dolore obcaecati unde, iste laudantium provident incidunt perspiciatis cum aliquam nobis, culpa dolorum quae quasi sed tempore.</p>
-          </div>
-          <div>
-            <h3>Current Projects</h3>
-            <hr>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore, magnam reiciendis deleniti laudantium sed hic explicabo ipsam ipsa culpa iste doloremque rerum, ducimus odio sunt beatae! Fugiat voluptates laudantium rerum!</p>
-          </div>
-          <div>
-            <h3>Current Projects</h3>
-            <hr>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem non fugit, cumque sit similique voluptates. Atque minima, ad eveniet reprehenderit, eos, odio consequuntur veniam dolor nisi dolorem quam porro distinctio?</p>
-          </div>
-          <div>
-            <h3>Current Projects</h3>
-            <hr>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur perferendis ipsa praesentium aperiam, quidem similique ab tenetur magnam rerum, ex aliquid eveniet aliquam veritatis laboriosam nihil adipisci, facilis ipsam saepe.</p>
-          </div>
       </div>
     </div>
 
     <footer>
       <!-- Footer bar links: Solid BG -->
       <ul>
-        <li><a class="links" href="#">home</a></li>
-        <li><a class="links" href="#">bio</a></li>
-        <li><a class="links" href="#">projects</a></li>
-        </ul>
+        <li><a class="links" href="index.html">home</a></li>
+        <li><a class="links" href="#bio">bio</a></li>
+        <li><a class="links" href="#skills">skills</a></li>
+        <li><a class="links" href="#projects">projects</a></li>
+      </ul>
 
-        <br>
-         <!-- Photo Credits from Unsplash for Page BG -->
+      <br />
+      <!-- Photo Credits from Unsplash for Page BG -->
       <div class="photo-credits">
         <h4>
-          Photo by <a class="blue" href="https://unsplash.com/@firsara">Fabian Irsara</a> on <a class="blue" href="https://images.unsplash.com/photo-1463171379579-3fdfb86d6285?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">Unsplash</a>
+          Photo by
+          <a class="blue" href="https://unsplash.com/@firsara">Fabian Irsara</a>
+          on
+          <a
+            class="blue"
+            href="https://images.unsplash.com/photo-1463171379579-3fdfb86d6285?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+            >Unsplash</a
+          >
         </h4>
       </div>
     </footer>
