Added Work Experience Details. Return to add Skills section.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
             <br />
             Media Arts AAS
           </p>
+          <p>
+            Web Design / Multimedia Academic Award
+            <br>
+            <b>April 2021</b> <i>Awarded by College</i>
+          </p>
+          <p>
+            Wordpress Certification
+            <br>
+            <b>Sept.-Oct. 2021</b>
+            <i>Skillsoft via ManpowerGroup</i>
+          </p>
           <div class="socials">
             <a href="https://vember.tech" target="_blank">
               <i class="fa fa-dribbble"></i
@@ -57,31 +68,57 @@
         </div>
         <div class="card" id="bio">
           <h2>About Me</h2>
-          <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+          <p>I'm a freelancer in the Web Design Industry with over 5 years of experience. Also, I'm an avid gamer who is often sucked into RPGs.</p>
         </div>
         <div class="card" id="skills">
           <h2>Skills</h2>
-          <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+          <p>
+            some text.
+          </p>
+        </div>
+          
+          
         </div>
       </div>
       <div class="right-side">
         <div class="card">
           <div class="heroBG">
             <h2>Employment</h2>
-            <h5>Title description, Dec 7, 2017</h5>
+            <h5>2010 - Current</h5>
           </div>
-          <p>Some text..</p>
-          <p>
-            Sunt in culpa qui officia deserunt mollit anim id est laborum
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-            exercitation ullamco.
-          </p>
+          <div class="jobs">
+            <h3>Systems Analyst > Experis US, Inc.</h3>
+            <h4>Sept. 2021 - Sept. 2021</h4>
+            <p>Two-day contract where I upgraded the back office's capability to process sales from any computer with a new credit card reader solution.
+              <hr>
+            </p>
+          </div>
+          <div class="jobs">
+            <h3>Shift Supervisor > Walgreens</h3>
+            <h4>Aug. 2018 - Jan. 2020</h4>
+            <p>Managed other cashiers and handled bookkeeping on each shift.
+              <hr>
+            </p>
+          </div>
+          <div class="jobs">
+            <h3>Overnight Stocker > Lowes</h3>
+            <h4>May 2016 - April 2017</h4>
+            <p>Scaned Inventory for Replenishment System and unloaded incoming freight trucks.
+              <hr>
+            </p>
+          </div>
+          <div class="jobs">
+            <h3>Customer Service Rep > Home Depot</h3>
+            <h4>Feb. 2010 - Nov. 2013</h4>
+            <p>Processed Sales Agreements and building orders, as well as Appliance Sales.
+              <hr>
+            </p>
+          </div>
         </div>
         <div class="card" id="projects">
           <div class="heroBG">
             <h2>Current Projects</h2>
-            <h5>Title description, Dec 7, 2017</h5>
+            <h5>2010 - Current</h5>
           </div>
           <p>Some text..</p>
           <p>
@@ -94,7 +131,7 @@
         <div class="card">
           <div class="heroBG">
             <h2>Interests</h2>
-            <h5>Title description, Dec 7, 2017</h5>
+            <h5>2010 - Current</h5>
           </div>
           <p>Some text..</p>
           <p>
