Finished Employment & Academic Sections. Return to Line 62 and swap Technical Skills with Interests Section and make it two columns.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github Portfolio - Timothy Burt</title>
     <link rel="stylesheet" href="style.css" />
+
     <!-- Social Links from Font Awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
+
   <body>
     <header>
       <nav>
+
         <!-- Nav bar links: Transparent BG -->
         <ul>
           <h2>Github Portfolio Project</h2>
@@ -27,62 +30,73 @@
 
     <div class="content">
       <div class="left-side">
+
         <div class="profile">
           <img
             src="img/Tim - Avatar for Biz.png"
             alt="Profile Picture"
-            class="profile-avatar"
-          />
+            class="profile-avatar"/>
           <h1>Timothy Burt</h1>
           <p class="title">Web Developer</p>
-          <p>
-            Suny Adirondack
-            <br />
-            Media Arts AAS
-          </p>
-          <p>
-            Web Design / Multimedia Academic Award
-            <br>
-            <b>April 2021</b> <i>Awarded by College</i>
-          </p>
-          <p>
-            Wordpress Certification
-            <br>
-            <b>Sept.-Oct. 2021</b>
-            <i>Skillsoft via ManpowerGroup</i>
-          </p>
+
+          <!-- Contact Options -->
           <div class="socials">
             <a href="https://vember.tech" target="_blank">
-              <i class="fa fa-dribbble"></i
-            ></a>
+              <i class="fa fa-dribbble"></i></a>
             <a href="https://github.com/timothyburt" target="_blank">
-              <i class="fa fa-github"></i
-            ></a>
+              <i class="fa fa-github"></i></a>
             <a href="https://www.linkedin.com/in/timothyjburt/" target="_blank">
-              <i class="fa fa-linkedin"></i
-            ></a>
-          </div>
+              <i class="fa fa-linkedin"></i></a>
+            </div>
+
           <button>
             <a class="links" href="mailto:refreshedpc@outlook.com">Contact</a>
           </button>
         </div>
+
         <div class="card" id="bio">
           <h2>About Me</h2>
           <p>I'm a freelancer in the Web Design Industry with over 5 years of experience. Also, I'm an avid gamer who is often sucked into RPGs.</p>
         </div>
+
         <div class="card" id="skills">
-          <h2>Skills</h2>
-          <p>
-            some text.
-          </p>
+          <h2>Technical Skills</h2>
+          <div class="skill">
+            <div>
+              <ul class="list">
+                <p class="title">Web Design - 5 yrs</p>
+                <li>wordpress - cms</li>
+                <li>html5</li>
+                <li>css3</li>
+                <li>js</li>
+              </ul>
+
+              <ul class="list">
+                <p class="title">Graphic Design - 2 yrs</p>
+                <li>Adobe creative cloud</li>
+                <li>Adobe illustrator</li>
+                <li>Adobe Photoshop</li>
+                <li>Adobe xd</li>
+              </ul>
+              
+              <ul class="list">
+                <p class="title">Marketing - 2 yrs</p>
+                <li>Social Media MGMT</li>
+                <li>Adobe Indesign</li>
+                <li>Adobe premiere</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
+      
       <div class="right-side">
         <div class="card">
           <div class="heroBG">
             <h2>Employment</h2>
             <h5>2010 - Current</h5>
           </div>
+
           <div class="jobs">
             <h3>Systems Analyst > Experis US, Inc.</h3>
             <h4>Sept. 2021 - Sept. 2021</h4>
@@ -90,6 +104,7 @@
               <hr>
             </p>
           </div>
+
           <div class="jobs">
             <h3>Shift Supervisor > Walgreens</h3>
             <h4>Aug. 2018 - Jan. 2020</h4>
@@ -97,6 +112,7 @@
               <hr>
             </p>
           </div>
+
           <div class="jobs">
             <h3>Overnight Stocker > Lowes</h3>
             <h4>May 2016 - April 2017</h4>
@@ -104,6 +120,7 @@
               <hr>
             </p>
           </div>
+
           <div class="jobs">
             <h3>Customer Service Rep > Home Depot</h3>
             <h4>Feb. 2010 - Nov. 2013</h4>
@@ -112,6 +129,38 @@
             </p>
           </div>
         </div>
+
+        <div class="card">
+          <div class="heroBG">
+            <h2>Academics</h2>
+            <h5>2003 - Current</h5>
+          </div>
+
+          <div class="jobs">
+            <h3>Wordpress Certification</h3>
+            <h4>Completed - Oct. 2021</h4>
+            <p>Skillsoft via ManpowerGroup
+              <hr>
+            </p>
+          </div>
+
+          <div class="jobs">
+            <h3>Web Design / Multimedia Person of the Year</h3>
+            <h4>Awarded - April 2021</h4>
+            <p>Suny Adirondack Community College
+              <hr>
+            </p>
+          </div>
+
+          <div class="jobs">
+            <h3>Associate in Media Arts Degree</h3>
+            <h4>Graduated - May 2021</h4>
+            <p>Suny Adirondacl Community College
+              <hr>
+            </p>
+          </div>
+        </div>
+
         <div class="card" id="projects">
           <div class="heroBG">
             <h2>Current Projects</h2>
@@ -128,7 +177,7 @@
         <div class="card">
           <div class="heroBG">
             <h2>Interests</h2>
-            <h5>2010 - Current</h5>
+            <h5>lifelong</h5>
           </div>
           <p>Some text..</p>
           <p>
@@ -161,8 +210,7 @@
           <a
             class="blue"
             href="https://images.unsplash.com/photo-1463171379579-3fdfb86d6285?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
-            >Unsplash</a
-          >
+            >Unsplash</a>
         </h4>
       </div>
     </footer>
