fixed buttons and responsive layout.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h2>Github Portfolio Project</h2>
           <li><a class="links" href="index.html">home</a></li>
           <li><a class="links" href="#bio">bio</a></li>
-          <li><a class="links" href="#skills">skills</a></li>
+          <li><a class="links" href="#skillset">skills</a></li>
           <li><a class="links" href="#projects">projects</a></li>
         </ul>
       </nav>
@@ -65,21 +65,51 @@
         </div>
       </div>
       
-      <div class="right-side">
-        <div class="card" id="projects">
+      <div class="right-side" id="projects">
+        <div class="card">
           <div class="heroBG">
             <h2>Current Projects</h2>
             <h5>2010 - Current</h5>
           </div>
 
           <div class="jobs">
-            <h3>Systems Analyst > Experis US, Inc.</h3>
-            <h4>Sept. 2021 - Sept. 2021</h4>
-            <p>Two-day contract where I upgraded the back office's capability to process sales from any computer with a new credit card reader solution.
+            <h3>Wordpress Developer > Vember Web Solutions</h3>
+            <h4>Dec. 2021 - CURRENT</h4>
+            <p>Built a web designer site that helps businesses move into the digital space that is entirely remote.
               <hr>
             </p>
           </div>
+
+          <div class="jobs">
+            <h3>Site Remodel > Creative Imagine Studios</h3>
+            <h4>Aug. 2021 - Oct. 2021</h4>
+            <p>Remodeled a website on Wix to be more modern and have better functionality. I implemented dynamic listings for script posts and improved the contact form. Rebuilt the landing page and utilized Figma for wireframes and prototyping.
+              <hr>
+            </p>
+          </div>
+
+          <div class="jobs">
+            <h3>Video Producer > TMS Livestreams</h3>
+            <h4>Nov. 2020 - CURRENT</h4>
+            <p>Built a website, social media precense on Facebook, and livestream audience on Twitch. Participated in livestreaming video games for sick children via Extra Life. Raised charity donations for Children's Miracle Network.
+              <hr>
+            </p>
+
+            <!-- Links to Projects -->
+            <div class="inner-links">
+              <button>
+                <a class="links" href="https://vember.tech" target="_blank">Vember Web Solutions</a>
+              </button>
+              <button>
+                <a class="links" href="https://www.creativeimaginestudios.com/" target="_blank">Creative Imagine Studios</a>
+              </button>
+              <button>
+                <a class="links" href="https://teammoststoked.live" target="_blank">Team Most Stoked</a>
+              </button>
+            </div>
+          </div>
         </div>
+
         <div class="card">
           <div class="heroBG">
             <h2>Employment</h2>
@@ -122,7 +152,7 @@
         <div class="card">
           <div class="heroBG">
             <h2>Academics</h2>
-            <h5>2003 - Current</h5>
+            <h5>2017 - Current</h5>
           </div>
 
           <div class="jobs">
@@ -150,10 +180,10 @@
           </div>
         </div>
         
-        <div class="card">
+        <div class="card" id="skillset">
           <div class="heroBG">
             <h2>Skills</h2>
-            <h5>lifelong</h5>
+            <h5>2016 - Current</h5>
           </div>
           <div class="skills">
             <ul class="list">
@@ -185,7 +215,7 @@
       <ul>
         <li><a class="links" href="index.html">home</a></li>
         <li><a class="links" href="#bio">bio</a></li>
-        <li><a class="links" href="#skills">skills</a></li>
+        <li><a class="links" href="#skillset">skills</a></li>
         <li><a class="links" href="#projects">projects</a></li>
       </ul>
 
