--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="card">
           <div class="heroBG">
             <h2>Current Projects</h2>
-            <h5>2010 - Current</h5>
+            <h5>2020 - Current</h5>
           </div>
 
           <div class="jobs">
@@ -135,7 +135,7 @@
           <div class="jobs">
             <h3>Overnight Stocker > Lowes</h3>
             <h4>May 2016 - April 2017</h4>
-            <p>Scaned Inventory for Replenishment System and unloaded incoming freight trucks.
+            <p>Scanned Inventory for Replenishment System and unloaded incoming freight trucks.
               <hr>
             </p>
           </div>
@@ -174,7 +174,7 @@
           <div class="jobs">
             <h3>Associate in Media Arts Degree</h3>
             <h4>Graduated - May 2021</h4>
-            <p>Suny Adirondacl Community College
+            <p>Suny Adirondack Community College
               <hr>
             </p>
           </div>
