--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="jobs">
             <h3>Video Producer > TMS Livestreams</h3>
             <h4>Nov. 2020 - CURRENT</h4>
-            <p>Built a website, social media precense on Facebook, and livestream audience on Twitch. Participated in livestreaming video games for sick children via Extra Life. Raised charity donations for Children's Miracle Network.
+            <p>Built a website, social media presense on Facebook, and livestream audience on Twitch. Participated in livestreaming video games for sick children via Extra Life. Raised charity donations for Children's Miracle Network.
               <hr>
             </p>
 
